traces/bug_279.txt
src/medit/picking.c:242: error: DEAD_STORE
  The value written to &shrink (type float) is never used.
Showing all 1 steps of the trace


src/medit/picking.c:242:3: Write of unused value
240.     refmat = matRef(sc,ph->ref);
241.     pm = &sc->material[refmat];
242.     shrink = 0.95*sc->shrink;
         ^
243.     
244.     glBegin(GL_QUADS);
